syntax = "proto3";
package ETHotfix;
message C2R_Login // IRequest
{
	int32 RpcId = 1;
	string Account = 2;
	string Password = 3;
}
message R2C_Login // IResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
	string Address = 4;
	int64 Key = 5;
	int64 GateId = 6;
}
message C2G_LoginGate // IRequest
{
	int32 RpcId = 1;
	int64 Key = 2;
	int64 GateId = 3;
}
message G2C_LoginGate // IResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
	int64 PlayerId = 4;
}
message G2C_TestHotfixMessage // IMessage
{
	string Info = 1;
}
message MessageResponse // IActorLocationResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
}
message C2M_TestActorRequest // IActorLocationRequest
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	string Info = 3;
}
message M2C_TestActorResponse // IActorLocationResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
	string Info = 4;
}
message PlayerInfo // IMessage
{
	int32 RpcId = 1;
}
message C2G_PlayerInfo // IRequest
{
	int32 RpcId = 1;
}
message G2C_PlayerInfo // IResponse
{
	int32 RpcId = 1;
	int32 Error = 2;
	string Message = 3;
	PlayerInfo PlayerInfo = 4;
	repeated PlayerInfo PlayerInfos = 5;
	string TestRepeatedString = 6;
	repeated int32 TestRepeatedInt32 = 7;
	repeated int64 TestRepeatedInt64 = 8;
}
message UnitInfo
{
	int64 UnitId = 1;
	float X = 2;
	float Y = 3;
	float Z = 4;
	int32 AngleY = 5;
}
message UnitOperation // IActorLocationMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	int64 Id = 3;
	int32 Index = 4;
	int64 Time = 5;
	int64 UnitId = 6;
	int32 X = 7;
	int32 Y = 8;
	int32 Z = 9;
	int32 AngleY = 10;
	int32 Operation = 11;
	repeated int32 IntParams = 12;
	string StringParams = 13;
	repeated int64 LongParams = 14;
}
message EntiyInfo
{
	int32 Type = 1;
	bytes BsonBytes = 2;
}
message M2C_InViewUnits // IActorMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	repeated EntiyInfo InViewEntitys = 3;
	bytes SelfUnit = 4;
	int32 SpaceType = 5;
}
message M2C_OnEnterView // IActorMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	EntiyInfo EnterEntity = 3;
	int32 X = 4;
	int32 Y = 5;
	int32 Z = 6;
	int32 AngleY = 7;
}
message M2C_OnLeaveView // IActorMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	int64 LeaveEntity = 3;
	int32 EntityType = 4;
}
message M2C_OnEntityChanged // IActorLocationMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	int64 Id = 3;
	int64 EntityId = 4;
	int32 EntityType = 5;
	int32 ComponentType = 6;
	int32 PropertyId = 7;
	bytes PropertyValue = 8;
	int32 X = 9;
	int32 Y = 10;
	int32 Z = 11;
	int32 AngleY = 12;
}
message C2M_SetEntityProperty // IActorLocationMessage
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	int64 Id = 3;
	int32 PropertyId = 4;
	bytes PropertyValue = 5;
}
message FireRequest // IActorLocationRequest
{
	int32 RpcId = 1;
	int64 ActorId = 2;
	int32 X = 3;
	int32 Y = 4;
	int32 Z = 5;
}
message G2M_GetCopyMap // IRequest
{
	int32 RpcId = 1;
}
